test(stitch): use Java 8 compatible source fixture loading